# fastapi_microservices

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docker/: Dockerfile.frontend  Dockerfile.order_service  Dockerfile.product_service  Dockerfile.user_service  docker-compose.yml  nginx.conf
docker/init-db/: init.sql
docs/api/: user_service.md
docs/architecture/: overview.md
docs/user_manual/: getting_started.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  i18n.js  main.js  style.css
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  Products.vue  Users.vue
k8s/deployments/: user-service.yaml
k8s/ingress/: ingress.yaml
k8s/services/: user-service.yaml
scratch/: seed.py
services/common/: README.md
services/common/utils/: __init__.py  config.py  database.py  rabbitmq.py
services/order_service/app/: main.py
services/order_service/app/core/: config.py  database.py
services/order_service/app/models/: __init__.py  order.py
services/order_service/app/routers/: __init__.py  orders.py
services/order_service/app/schemas/: __init__.py  order.py
services/product_service/app/: main.py
services/product_service/app/core/: config.py  database.py
services/product_service/app/models/: __init__.py  product.py
services/product_service/app/routers/: __init__.py  products.py
services/product_service/app/schemas/: __init__.py  (+1 more)
services/user_service/: .env.example
services/user_service/app/: main.py
tests/functional/: test_user_service.py
tests/performance/: locustfile.py
(+10 files in other folders)
